--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
+                <a class="navbar-brand d-flex align-items-center" href="{{ url_for('routes.home') }}">
                     <img src="{{ url_for('static', filename='assets/logo.svg') }}" alt="Cure24 Logo" height="40">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
