--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,13 @@
 </head>
 <body>
     <h1>Benvenuto su Cure24!</h1>
-    <a href="{{ url_for('routes.register') }}">Registrati</a> |
-    <a href="{{ url_for('routes.login') }}">Login</a>
+
+    {% if current_user.is_authenticated %}
+        <p>Ciao, {{ current_user.username }}!</p>
+        <a href="{{ url_for('routes.logout') }}">Logout</a>
+    {% else %}
+        <a href="{{ url_for('routes.register') }}">Registrati</a> |
+        <a href="{{ url_for('routes.login') }}">Login</a>
+    {% endif %}
 </body>
 </html>
