--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Registrazione</title>
+    <title>Registrazione - Cure24</title>
 </head>
 <body>
-    <h1>Registrazione</h1>
+    <h1>Registrati</h1>
     <form method="POST">
         {{ form.hidden_tag() }}
         {{ form.username.label }} {{ form.username() }}<br>
@@ -16,3 +16,4 @@
     <a href="{{ url_for('routes.login') }}">Hai già un account? Login</a>
 </body>
 </html>
+
